Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

#ifndef GRPC_SRC_CORE_CONFIG_CONFIG_VARS_H
#define GRPC_SRC_CORE_CONFIG_CONFIG_VARS_H

#include <grpc/support/port_platform.h>
#include <stdint.h>

#include <atomic>
#include <optional>
#include <string>

#include "absl/strings/string_view.h"
#include "absl/types/optional.h"

namespace grpc_core {

// ConfigVars class manages runtime configuration variables for gRPC core.
// It provides thread-safe access to configuration values and allows for
// runtime overrides of these values.
class GPR_DLL ConfigVars {
 public:
  // Overrides structure allows for temporary modification of configuration values.
  // Each field corresponds to a configuration variable that can be overridden.
  struct Overrides {
    absl::optional<int32_t> client_channel_backup_poll_interval_ms;
    absl::optional<int32_t> channelz_max_orphaned_nodes;
    absl::optional<bool> enable_fork_support;
    absl::optional<bool> abort_on_leaks;
    absl::optional<bool> not_use_system_ssl_roots;
    absl::optional<bool> cpp_experimental_disable_reflection;
    absl::optional<std::string> dns_resolver;
    absl::optional<std::string> verbosity;
    absl::optional<std::string> poll_strategy;
    absl::optional<std::string> system_ssl_roots_dir;
    absl::optional<std::string> default_ssl_roots_file_path;
    absl::optional<std::string> ssl_cipher_suites;
    absl::optional<std::string> experiments;
    absl::optional<std::string> trace;
  };

  // Delete copy constructor and assignment operator to ensure singleton behavior
  ConfigVars(const ConfigVars&) = delete;
  ConfigVars& operator=(const ConfigVars&) = delete;

  // Returns the singleton instance of ConfigVars.
  // Uses atomic operations for thread-safe access.
  static const ConfigVars& Get() {
    auto* p = config_vars_.load(std::memory_order_acquire);
    if (p != nullptr) return *p;
    return Load();
  }

  // Applies configuration overrides to the singleton instance
  static void SetOverrides(const Overrides& overrides);

  // Resets the configuration to default values
  static void Reset();

  // Returns a string representation of all configuration variables
  std::string ToString() const;

  // Accessor methods for various configuration variables:

  // Returns the currently enabled experiments
  absl::string_view Experiments() const { return experiments_; }

  // Returns the backup poll interval for client channels in milliseconds
  int32_t ClientChannelBackupPollIntervalMs() const {
    return client_channel_backup_poll_interval_ms_;
  }

  // Returns the DNS resolver implementation to use
  absl::string_view DnsResolver() const { return dns_resolver_; }

  // Returns the trace configuration string
  absl::string_view Trace() const { return trace_; }

  // Returns the verbosity level
  absl::string_view Verbosity() const { return verbosity_; }

  // Returns whether fork support is enabled
  bool EnableForkSupport() const { return enable_fork_support_; }

  // Returns the polling strategy to use
  absl::string_view PollStrategy() const { return poll_strategy_; }

  // Returns whether to abort on memory leaks
  bool AbortOnLeaks() const { return abort_on_leaks_; }

  // Returns the system SSL roots directory path
  std::string SystemSslRootsDir() const;

  // Returns the default SSL roots file path
  std::string DefaultSslRootsFilePath() const;

  // Returns whether to use system SSL roots
  bool NotUseSystemSslRoots() const { return not_use_system_ssl_roots_; }

  // Returns the SSL cipher suites configuration
  absl::string_view SslCipherSuites() const { return ssl_cipher_suites_; }

  // Returns whether C++ reflection is disabled
  bool CppExperimentalDisableReflection() const {
    return cpp_experimental_disable_reflection_;
  }

  // Returns the maximum number of orphaned nodes in channelz
  int32_t ChannelzMaxOrphanedNodes() const {
    return channelz_max_orphaned_nodes_;
  }

 private:
  // Private constructor that initializes configuration with optional overrides
  explicit ConfigVars(const Overrides& overrides);
  
  // Loads the configuration (initializes singleton if not already initialized)
  static const ConfigVars& Load();

  // Atomic pointer to the singleton instance
  static std::atomic<ConfigVars*> config_vars_;

  // Configuration variables with their default values:
  int32_t client_channel_backup_poll_interval_ms_;
  int32_t channelz_max_orphaned_nodes_;
  bool enable_fork_support_;
  bool abort_on_leaks_;
  bool not_use_system_ssl_roots_;
  bool cpp_experimental_disable_reflection_;
  std::string dns_resolver_;
  std::string verbosity_;
  std::string poll_strategy_;
  std::string ssl_cipher_suites_;
  std::string experiments_;
  std::string trace_;

  // Optional override values for SSL roots configuration
  absl::optional<std::string> override_system_ssl_roots_dir_;
  absl::optional<std::string> override_default_ssl_roots_file_path_;
};

}  // namespace grpc_core

#endif  // GRPC_SRC_CORE_CONFIG_CONFIG_VARS_H
```